Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net

Version 2.1.3
 * Robert Sowada
   - Changed version to 2.1.3
   - Bugfix: Detecting FAMCreated
   - Bugfix: Maildir protocol provides uid
   - Cleanup: Using glib functions for directory access (maildir)
   - Bugfix: Obtaining version of gnubiff config file
   - Bugfix: Don't parse already read messages (maildir)

Version 2.1.2		2005-03-26 17:28
 * Robert Sowada
   - Changed version to 2.1.2, updated spec file
   - Various small changes
   - Updated po files, German translation
   - Cleanup: Complete documentation of functions in "src/options.cc"
   - Bugfix: Allow storing of strings that contain spaces in string list
        options
   - Bugfix: Email address for bugs updated in "ChangeLog", "configure.ac",
        "NEWS"
   - Bugfix: Respect folding in mail header
   - Bugfix: Better handling of certain header lines
   - Bugfixes/Cleanup: Parsing of content type header field
   - Bugfix: Handling of quoted strings (IMAP4)
   - Feature: Support other encodings than "7bit" for all protocols
   - Feature: Error message if content type is not supported
   - Bugfix: Typo in mini help(thanks to Clytie Siddall for reporting this bug)
   - Bugfix: Bugs regarding the word "mail" (thanks to Clytie Siddall for
        reporting this bug)
   - Added Clytie Siddall to contributors
   - Feature: Support for "multipart/mixed" and "multipart/alternative" mails
   - Feature: Version saved to config file
   - Feature: Autoupdate of options that have new default values
   - Feature: Vietnamese translation (thanks to Clytie Siddall)
   - Added Clytie Siddall to translators
   - Added David Smeringe to translators (was forgotten before)
   - Update: Included Dutch translation for 2.0.2 into CVS (was from 1.4.0
        before)
   - Bugfix: Building certificate chain automatically (this fixes debian
        bug #226914)
   - Bugfix: Don't load config file twice in gnome mode